--- a/css/main.css
+++ b/css/main.css
@@ -49,11 +49,25 @@ body {
     justify-content: space-between;
 }
 
+.header .grid .col:first-child {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.header-social a {
+    font-size: 17px;
+    color: #fff;
+    padding: 5px;
+    display: inline-block;
+}
+
 /* Menu */
 .menu > ul {
 	display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 30px;
 }
 
 .menu > ul > li > a {
@@ -69,16 +83,120 @@ body {
 	text-decoration: underline;
 }
 
-/* Social */
-.social {
-	display: flex;
+/* Search */
+.search {
+    display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.search-input {
+    width: 100%;
+    padding: 0 15px;
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-size: 14px;
+    height: 40px;
+    border: solid 1px #dbdcdc;
+    outline: none;
+}
+
+.search-button {
+    min-width: 100px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    background: #3F51B5;
+    color: #fff;
+    cursor: pointer;
+    font-family: 'Open Sans';
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+.search-button:hover,
+.search-button:focus {
+    background: #2196f3;
+}
+
+/* Box */
+.box {
+    padding: 20px 10px;
+    background: #f5f3f3;
+    border: solid 1px #dbdcdc;
+    margin: 20px 0;
+}
+
+/* Categorias */
+.categorias-title {
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 15px 0;
+}
+
+.categorias-menu ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.categorias-menu ul > li > a {
+    text-decoration: none;
+    color: #3f51b5;
+    font-size: 16px;
+    padding: 12px;
+    display: block;
+}
+
+.categorias-menu ul > li > a:hover,
+.categorias-menu ul > li > a:focus {
+    color: #2196f3;
+}
+
+/* Artigos */
+.artigos .grid {
+    display: flex;
     justify-content: space-between;
 }
 
-.social a {
-	text-decoration: none;
+.artigos-item {
+    margin: 0 10px 20px 10px;
+    cursor: pointer;
+}
+
+.artigos-item img {
+    max-width: 100%;
+    display: block;
+}
+
+.artigos-item h2 a {
+    text-decoration: none;
+    font-weight: 600;
+    margin: 10px 0;
+    display: block;
+    color: #000;
+    line-height: 1.2;
+}
+
+.artigos-item p {
+    font-size: 14px;
+    line-height: 1.2;
+}
+
+.artigos-button {
+    width: 150px;
+    height: 40px;
+    border: none;
+    background: #3F51B5;
     color: #fff;
-    font-size: 18px;
-    padding: 5px;
+    cursor: pointer;
+    font-weight: 300;
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    padding-top: 12px;
+    font-size: 16px;
 }
